--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,22 @@
 {
     "files.associations": {
         "chrono": "c",
-        "iterator": "c"
+        "iterator": "c",
+        "__hash_table": "c",
+        "__split_buffer": "c",
+        "__tree": "c",
+        "array": "c",
+        "bitset": "c",
+        "deque": "c",
+        "initializer_list": "c",
+        "random": "c",
+        "set": "c",
+        "string": "c",
+        "string_view": "c",
+        "unordered_map": "c",
+        "unordered_set": "c",
+        "utility": "c",
+        "vector": "c",
+        "stdlib.h": "c"
     }
 }
